# fault_fracture_localization

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
config/: parameters.yaml
launch/: launch.py  launch.yaml  multi_launch.py  perception_launch.py
msg/: TrajectoryCoordinates.msg
src/: multi_uav_example.py  offboard_control.py  perception.py  state_machine.py
src/control/: package.xml  setup.py
src/control/control/: offboard_control.py  optimization.py  perception.py
src/control/launch/: launch.py
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Waypoint.msg
src/custom_msgs/srv/: WaypointService.srv
src/fault_fracture_localization/: package.xml  setup.cfg  setup.py
src/fault_fracture_localization/launch/: launch.py
src/fault_fracture_localization/src/: offboard_control.py  optimization.py  perception.py  state_machine.py
srv/: WaypointService.srv
